# stock-intelligent

./: .env.example  .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analysis/: __init__.py  dividends.py  etf.py  factors.py  rating.py  sectors.py  technicals.py  valuation.py
backend/app/api/: deps.py  router.py
backend/app/core/: cache.py  config.py  entitlements.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/jobs/: __init__.py  alerts_worker.py  continuous_analyzer.py  daily_pipeline.py  live_quotes.py
backend/app/models/: __init__.py  alert.py  company.py  paper_portfolio.py  stock_analysis.py  user.py  watchlist.py
backend/app/providers/: __init__.py  http.py  nasdaq.py  sec.py  stooq.py
backend/app/schemas/: __init__.py  alerts.py  analysis.py  auth.py  company.py  paper.py
backend/app/services/: alerts.py  backtest.py  discovery.py  email.py  google_oauth.py  market.py  paper_portfolio.py  queries.py  screen_parser.py  screener.py  stripe_client.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_companies.py  0002_create_stock_analyses.py  0003_allow_shared_cik.py  0004_track_analysis_coverage.py  (+16 more)
backend/tests/: test_alerts.py  test_api_integration.py  test_auth.py  test_billing.py  test_cache.py  test_dividends.py  test_etf_analysis.py  test_factors.py  test_google_oauth.py  test_health.py  test_live_quotes.py  test_prune.py  test_screen_parser.py  test_sectors.py  test_technicals.py  test_valuation.py
(+70 files in other folders)
